multiple issues with sign up page, footer and form not properly align, head,header and footer reentered, css for joinus removed

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -75,58 +75,6 @@ header {
 
 /* Join us */
 
-#backgroundflag {   
-    background: url('../images//Flags\ vasco\ dublin.jpg') no-repeat;
-    background-attachment: fixed;
-    background-position: center;
-    background-size: cover;
-   }
-
-.signup-form {
-    margin: 300px 60% 0 0;
-    color: #fff;
-    background-color: rgba(171, 183, 183, 0.4);
-    max-width: 400px;
-    position: absolute;
-    left: 10%;
-    padding: 100px;
-}
-
-.signup-form h1 {
-    color: #f19812;
-    margin-bottom: 30px;
-}
-
-.kickoff-button {
-    margin-top: 30px;
-    border-radius: 1px;
-    padding: 15px 30px 15px 30px;
-    text-align: center;
-    font-size: 100%;
-    background-color: #837e7e;
-    color: #fafafa;
-    display: block;
-}
-
-.kickoff-button:hover {
-    background-color: #fafafa;
-    color: #837e7e;
-}
-
-.text-input {
-    background: transparent;
-    color: #fafafa;
-    width: 100%;
-    height: 20px;      
-}
-
-::placeholder {
-    color: #fff;
-}
-
-.text-input:hover {
-    border-color: #ff7900;
-}
 
 
 /* Footer */
